# aisix

./: .dockerignore  .gitignore  2026-04-13-control-plane-agent.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TEMP-docs-release-strategy.md  TEMP-docs-style-reference.md  build.rs  ca.crt  config.example.yaml  config.managed.yaml  config.yaml
.github/: dependabot.yml  release-notes-header.md
.github/workflows/: build.yaml  ci.yml  docker-image.yml  docker.yaml  notify-build.yaml  notify-docs-update.yaml  notify-ee-build.yaml  objstore-cloud-identity.yml  objstore-real-cloud.yml  publish-docs-site.yml  quickstart.yaml  real-chain.yml  release-draft.yml
ci/: docker-compose.yaml  smoke-test.sh
crates/admin-ui/: Cargo.toml
crates/aisix-a2a/: Cargo.toml
crates/aisix-a2a/src/: bridge.rs  error.rs  lib.rs
crates/aisix-a2a/tests/: upstream_roundtrip.rs
crates/aisix-admin/: Cargo.toml
crates/aisix-cache/: Cargo.toml
crates/aisix-cache/src/: cache.rs  embed.rs  key.rs  lib.rs  memory.rs  pgvector.rs  redis.rs
crates/aisix-cache/tests/: redis_integration.rs
crates/aisix-core/: Cargo.toml
crates/aisix-gateway/: Cargo.toml
crates/aisix-guardrail/: Cargo.toml
crates/aisix-guardrails/: Cargo.toml
crates/aisix-llm/: Cargo.toml
crates/aisix-llm/src/: lib.rs  session.rs
crates/aisix-llm/src/formats/openai/: responses.rs
crates/aisix-llm/src/gateway/: gateway.rs  provider_instance.rs
crates/aisix-llm/src/gateway/formats/: anthropic_messages.rs
crates/aisix-llm/src/gateway/formats/openai/: mod.rs
crates/aisix-llm/src/gateway/providers/: azure.rs  cohere.rs  deepseek.rs  gemini.rs  macros.rs  mistral.rs  mod.rs  modelscope.rs  openrouter.rs  siliconflow.rs  zhipuai.rs
crates/aisix-llm/src/gateway/providers/anthropic/: transform.rs
crates/aisix-llm/src/gateway/streams/: bridged.rs  native.rs
crates/aisix-llm/src/gateway/streams/reader/: aws_event_stream.rs
crates/aisix-llm/src/gateway/traits/: chat_format.rs  provider.rs
crates/aisix-llm/src/gateway/types/: embed.rs
crates/aisix-llm/src/providers/: bedrock.rs  fireworks.rs  groq.rs  moonshot.rs  openai.rs  stepfun.rs  xai.rs
crates/aisix-llm/src/providers/anthropic/: mod.rs
crates/aisix-llm/src/providers/bedrock/: transform.rs
crates/aisix-llm/src/streams/: hub.rs
crates/aisix-llm/src/streams/reader/: sse.rs
crates/aisix-llm/src/traits/: native.rs
crates/aisix-llm/src/types/: response.rs
crates/aisix-mcp/: Cargo.toml
crates/aisix-mcp/src/: bridge.rs  gateway.rs  lib.rs  oauth.rs
crates/aisix-mcp/tests/: gateway_aggregation.rs  upstream_roundtrip.rs
crates/aisix-obs/: Cargo.toml
crates/aisix-provider-azure-openai/: Cargo.toml
crates/aisix-provider-azure-openai/src/: aad_token_mint.rs  bridge.rs  lib.rs  wire.rs
crates/aisix-provider-bedrock/: Cargo.toml
crates/aisix-provider-bedrock/src/: bridge.rs  lib.rs
crates/aisix-provider-deepseek/: Cargo.toml
crates/aisix-provider-gemini/: Cargo.toml
crates/aisix-provider-vertex/: Cargo.toml
crates/aisix-provider-vertex/src/: bridge.rs  lib.rs  token_mint.rs  wire.rs
crates/aisix-provider-vertex/test-fixtures/: test_sa_private_rotated.pem
crates/aisix-proxy/: AGENTS.md  Cargo.toml
crates/aisix-ratelimit/: Cargo.toml
crates/aisix-redis/: Cargo.toml
crates/aisix-redis/src/: lib.rs
crates/aisix-redis/tests/: sentinel_failover.rs
crates/aisix-server/: Cargo.toml
docker/: entrypoint.sh
docs/: README.md  api-admin.md  api-proxy.md  architecture.md  index.md  index.mdx  managed-mode.md  observability.md  semantic-routing.md  sidebars.js  testing.md
docs/architecture/: overview.md  protocol-translation.md  snapshot-and-watch.md  two-phase-rate-limit.md
docs/cloud/: cloud-playground.md  cloud-vs-self-hosted.md  gateway-certificates-and-managed-dp.md  offline-resilience.md  organizations-and-environments.md  overview.md  provider-key-rotation.md  resource-projection.md  usage-events-and-billing.md
docs/configuration/: admin-api.md  api-keys.md  bootstrap-config.md  budgets.md  byo-endpoint.md  caching.md  configuration-propagation.md  ensemble-models.md  guardrails.md  models.md  observability-exporters.md  overview.md  provider-keys.md  rate-limits.md  routing-and-failover.md
docs/core-concepts/: dynamic-configuration.md  model-and-api-key.md  provider-abstraction.md  request-lifecycle-hooks.md
docs/getting-started/: admin-ui.md  quick-start.md
docs/guides/: authentication.md  model-management.md  rate-limiting.md  request-streaming.md
docs/integration/: anthropic-messages.md  audio.md  embeddings.md  errors-and-retries.md  images.md  openai-compatible-api.md  overview.md  passthrough.md  provider-upstreams.md  rerank.md  responses.md  streaming.md  tool-calling.md  upstream-azure-openai.md  upstream-bedrock.md  upstream-openai-compat.md  upstream-vertex.md
docs/internals/: gateway-types.md  llm-gateway.md  llm-streams.md  llm-types.md
docs/introduction/: overview.md
docs/operations/: health-checks.md  metrics-and-logs.md  network-and-security.md  overview.md  production-deployment.md  testing-and-verification.md  tls-and-mtls.md  troubleshooting.md  upgrades-and-compatibility.md
docs/overview/: core-concepts.md  deployment-modes.md  feature-matrix.md  glossary.md  what-is-aisix-ai-gateway.md
docs/quickstart/: aisix-cloud-managed-dp.md  anthropic-sdk.md  first-model-first-key-first-request.md  openai-sdk.md  quickstart.md  self-hosted.md
docs/reference/: adapters.md  admin-api-reference.md  glossary.md  headers-and-error-codes.md  port-reference.md  provider-compatibility.md  provider-key-schema.md  proxy-api-reference.md  resource-schemas.md  runtime-config-schema.md
docs/tutorials/: add-keyword-guardrails.md  build-a-virtual-model-with-failover.md  overview.md  (+5 more)
quickstart/: config.yaml  docker-compose.yaml  quickstart.sh
schemas/: README.md
src/: lib.rs  main.rs
tests/: api.rs  package.json  pnpm-lock.yaml  server.test.ts  tsconfig.json
ui/: package.json  pnpm-lock.yaml  vite.config.ts
(+583 files in other folders)
