[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2024"

[features]
trace = []

[dependencies]
log = { version = "0.4.29", features = ["kv", "kv_serde"] }
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
openssl = { version = "0.10" }
tokio-openssl = "0.6"
tokio-util = { version = "0.7", features = ["compat"] }
hyper-util = { version = "0.1.19", features = [
  "tokio",
  "server-auto",
  "client-pool",
] }
config = "0.15.19"
http-body-util = "0.1.3"
tower = "0.5.2"
axum = { version = "0.8.8", features = [
  "http1",
  "json",
  "matched-path",
  "tokio",
  "macros",
], default-features = false }
serde = "1.0.228"
serde_json = "1.0"
etcd-client = "0.17.0"
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
arc-swap = "1.7"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.120.0"
anyhow = "1.0.100"
fastrace = { version = "0.7.16", features = ["enable"] }
fastrace-axum = "0.1.3"
fastrace-opentelemetry = "0.15.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
tonic = "0.14.2"
fastrace-tracing = "0.1.1"
fastrace-reqwest = "0.2.0"
logforth = { version = "0.29.1", features = [
  "starter-log",
  "diagnostic-fastrace",
  "append-fastrace",
] }
clap = { version = "4.5.54", features = ["derive"] }
http = "1.4.0"
opentelemetry-semantic-conventions = "0.31.0"
pin-project = "1.1.10"
dashmap = "6.1.0"
thiserror = "1.0"
skp-ratelimit = { git = "https://github.com/bzp2010/skp-ratelimit.git", branch = "bzp/feat-custom-cost", default-features = false, features = [
  "memory",
] }
rand = "0.10.0"
http-body = "1.0.1"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
pretty_assertions = "1.4"
