[package]
name = "aisix-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: response cache (in-memory / Redis / semantic)"

[dependencies]
aisix-core = { path = "../aisix-core" }
aisix-gateway = { path = "../aisix-gateway" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
moka.workspace = true
# pgvector backend talks to dp-manager over HTTP(S) — reuse the
# workspace reqwest so the binary doesn't pull in two TLS stacks.
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
redis = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
wiremock.workspace = true

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]
