[package]
name = "aisix-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: MCP gateway — upstream client + downstream-facing aggregating endpoint (Streamable HTTP)"

[dependencies]
aisix-core = { path = "../aisix-core" }
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Upstream OAuth 2.0 client-credentials token minting (`crate::oauth`) plus
# header types for the `api_key` transport headers.
http.workspace = true
reqwest.workspace = true
# rmcp 1.8.0 builds its transport on the reqwest 0.13 line (the workspace is
# on 0.12) and does not re-export it. This renamed dep exists ONLY to name
# `StreamableHttpError<reqwest::Error>` when downcasting a connect failure to
# detect an upstream 401 — it resolves to the same crate version rmcp links,
# so the downcast sees the identical type. Kept `default-features = false`:
# only the `Error` type is used, never a client. The 401-invalidation
# integration test fails loudly if these ever stop unifying.
rmcp-reqwest = { package = "reqwest", version = "0.13", default-features = false }
# Token-cache keying: the client secret is folded into the cache key as a
# SHA-256 digest so a rotated secret never reuses the previous secret's token.
sha2.workspace = true
hex.workspace = true

# Official MCP Rust SDK. Pinned exactly: rmcp is <16 months old and still
# ships breaking changes on a roughly-monthly cadence, so we hold a fixed
# version and keep all rmcp types behind this crate's own surface (the
# `McpBridge` trait and the gateway DTOs) to absorb API drift.
#
# The gateway is dual-role — an MCP client to upstream servers AND an MCP
# server to downstream agents — so both the `client` and `server` halves are
# production dependencies.
[dependencies.rmcp]
version = "=1.8.0"
default-features = false
features = [
    "client",
    "server",
    "base64",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    # `transport-streamable-http-client-reqwest` only wires `dep:reqwest`
    # with NO TLS backend; rmcp gates rustls behind its separate `reqwest`
    # feature (`reqwest?/rustls`). Without this, `https://` upstreams — i.e.
    # every real authenticated upstream — fail to connect. rustls matches the
    # workspace TLS posture (reqwest 0.12 already uses rustls-tls elsewhere).
    "reqwest",
    "transport-streamable-http-server",
]

[dev-dependencies]
aisix-core = { path = "../aisix-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum.workspace = true
async-trait.workspace = true
