[package]
name = "aisix-provider-bedrock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: AWS Bedrock runtime provider bridge (skeleton — multi-publisher dispatch)"

[dependencies]
aisix-core = { path = "../aisix-core" }
aisix-gateway = { path = "../aisix-gateway" }
# Reuse Anthropic Messages request/response wire types for the
# `anthropic.*` Bedrock publisher (Claude on Bedrock). The body shape
# is the Anthropic Messages API minus the API-key header plus
# `anthropic_version: "bedrock-2023-05-31"` — built on top of the
# anthropic crate's typed serializers/deserializers.
aisix-provider-anthropic = { path = "../aisix-provider-anthropic" }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
http.workspace = true
# AWS SDK: handles SigV4 + retries + binary event-stream framing.
# Same workspace deps the guardrails crate uses for ApplyGuardrail.
aws-config.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-credential-types.workspace = true
aws-smithy-async.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
wiremock.workspace = true
http.workspace = true
